Correctly a card layout issue
I left some margin auto on and it was throwing odd number cards to the
right.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -298,6 +298,7 @@ body {
 			width: calc(100%/2 - 10px);
 			margin: {
 				right: 20px;
+				left: 0px;
 			}
 		}
 		
